--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,25 @@
 	margin:0;
 	padding:0;
 	font-family:'Raleway', sans-serif;
+	font-weight: 100;
 }
 
-body, html, .main-section {
+body, html{
 	height:100%;
-	font-size:16px;
+	font-size:14px;
 }
 
-.jumbotron{
+p{
+	color:#FFFFF0;
+}
+h1{
+	color:#330004;
+}
+.clear-both{
+	clear:both;
+}
+.main-section{
+	width:100%;
 	height: 100%; 
 	background:url("../images/adult-application-asian-733856.jpg") no-repeat center;
 	background-size: cover;
@@ -21,7 +32,77 @@ body, html, .main-section {
 
 .logo-container{
 	width:100%;
+	padding: 1% 0;
 	text-align:center;
 	text-transform: uppercase;
 	font-family: 'Lato', sans-serif;
+	font-size:3em;
 }
+
+.jumbotron{
+	width:75%;
+	min-height:75vh;
+	margin: 30vh auto 0;
+	vertical-align:middle;
+	text-align:center;
+	position:relative;
+}
+
+.jumbo-child{
+	margin:0 auto;
+	max-width:800px;
+	min-height:300px;
+	padding: 2% 5%;
+	color:#FFFFF0;
+	background-color: rgba(0, 0, 0, 0.5);
+	overflow:auto;
+}
+.jumbo-left, .jumbo-right{
+	width:50%;
+	float:left;
+}
+.jumbo-child h1{
+	color:#FFFFF0;
+	font-family: 'PT Sans Narrow', sans-serif;
+	text-transform: uppercase;
+	letter-spacing:0.3em;
+	line-height:2;
+	padding: 2% 0;
+	font-size:2em;
+}
+.jumbo-child p{
+	width:70%;
+	margin:0 auto;
+	letter-spacing: 0.1em;
+	line-height:1.618;
+	padding: 2% 0 15%;
+	font-size:0.9em;
+}
+
+.jumbo-child button {
+	background-color: #330004;
+	border: none;
+	color: #FFFFF0;
+	padding:2% 5%;
+	text-align:center;
+	text-decoration:none;
+	font-size:1em;
+}
+
+.arrow {
+	width:75px;
+	height:75px;
+	margin: 20% auto;
+	border-radius:100px;
+	background-color:#FFFFF0;
+	box-shadow: 
+		0 3px 6px rgba(0, 0, 0, 0.36),
+		0 3px 6px rgba(0, 0, 0, 0.36),
+		0 3px 6px rgba(0, 0, 0, 0.36),
+		0 3px 6px rgba(0, 0, 0, 0.36);
+}
+.arrow > i{
+	margin-top:7px;
+	font-size:60px;
+}
+
