--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 *{
 	margin:0;
 	padding:0;
+	box-sizing: border-box;
 	font-family:'Raleway', sans-serif;
 	font-weight: 100;
 }
@@ -41,8 +42,7 @@ h1{
 
 .jumbotron{
 	width:75%;
-	min-height:75vh;
-	margin: 30vh auto 0;
+	margin: 0 auto 0;
 	vertical-align:middle;
 	text-align:center;
 	position:relative;
