--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,99 +10,132 @@
 	font-weight: 100;
 }
 
-body, html{
-	height:100%;
-	font-size:14px;
-}
+body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 
-p{
-	color:#FFFFF0;
-}
-h1{
-	color:#330004;
-}
-.clear-both{
-	clear:both;
-}
-.main-section{
-	width:100%;
-	height: 100%; 
-	background:url("../images/adult-application-asian-733856.jpg") no-repeat center;
-	background-size: cover;
-}
+/* default stylings */
+	h1{color:#330004;}	
+	.image-container > img { width:100%; height:auto;}
+	.left, .right{width:50%; float:left;}
+	
+	.clear-both{clear:both;}
 
-.logo-container{
-	width:100%;
-	padding: 1% 0;
-	text-align:center;
-	text-transform: uppercase;
-	font-family: 'Lato', sans-serif;
-	font-size:3em;
-}
+/* home section stylings */
+	.main-section{
+		width:100%;
+		height: 100%; 
+		background:url("../images/adult-application-asian-733856.jpg") no-repeat center;
+		background-size: cover;
+	}
+	/* header stylings */
+		.logo-container{
+			width:100%;
+			height:5%;
+			padding: 1% 0;
+			text-align:center;
+			text-transform: uppercase;
+			font-family: 'Lato', sans-serif;
+			font-size:32px;
+		}
+		/* Jumbotron's styling */
+			.jumbotron{
+				width:70%;
+				height:95%;
+				margin:0 auto;
+				text-align:center;
+			}
+			/* Jumbotron's child styling */
+				.jumbo-child{
+					margin:15% auto 0;
+					padding: 2% 5%;
+					color:#FFFFF0;
+					background-color: rgba(0, 0, 0, 0.75);
+					text-align:center;
+				}
+				.jumbo-child h1{
+					color:#FFFFF0;
+					font-family: 'PT Sans Narrow', sans-serif;
+					text-transform: uppercase;
+					letter-spacing:0.3em;
+					line-height:2;
+					padding: 2% 0;
+					font-size:2em;
+				}
+				.jumbo-child p{
+					width:70%;
+					margin:0 auto;
+					letter-spacing: 0.1em;
+					line-height:1.618;
+					padding: 2% 0;
+					color:#FFFFF0;
+					font-size:0.8em;
+				}
 
-.jumbotron{
-	width:75%;
-	margin: 0 auto 0;
-	vertical-align:middle;
-	text-align:center;
-	position:relative;
-}
+				.jumbo-child button {
+					background-color: #330004;
+					border: none;
+					color: #FFFFF0;
+					padding:2% 5%;
+					margin:5% 0;
+					text-align:center;
+					text-decoration:none;
+					font-size:1em;
+				}
+				/* Arrow styling */
+					.arrow {
+						width:75px;
+						height:75px;
+						margin:10% auto;
+						border-radius:100px;
+						background-color:#FFFFF0;
+						box-shadow: 
+							0 3px 6px rgba(0, 0, 0, 0.36),
+							0 3px 6px rgba(0, 0, 0, 0.36),
+							0 3px 6px rgba(0, 0, 0, 0.36),
+							0 3px 6px rgba(0, 0, 0, 0.36);
+					}
+					.arrow > i{
+						margin-top:7px;
+						font-size:60px;
+					}
 
-.jumbo-child{
-	margin:0 auto;
-	max-width:800px;
-	min-height:300px;
-	padding: 2% 5%;
-	color:#FFFFF0;
-	background-color: rgba(0, 0, 0, 0.5);
-	overflow:auto;
-}
-.jumbo-left, .jumbo-right{
-	width:50%;
-	float:left;
-}
-.jumbo-child h1{
-	color:#FFFFF0;
-	font-family: 'PT Sans Narrow', sans-serif;
-	text-transform: uppercase;
-	letter-spacing:0.3em;
-	line-height:2;
-	padding: 2% 0;
-	font-size:2em;
-}
-.jumbo-child p{
-	width:70%;
-	margin:0 auto;
-	letter-spacing: 0.1em;
-	line-height:1.618;
-	padding: 2% 0 15%;
-	font-size:0.9em;
-}
+					/* For bounce animation */
+						.bounce {
+						  animation: bounce 2s infinite;
+						}
 
-.jumbo-child button {
-	background-color: #330004;
-	border: none;
-	color: #FFFFF0;
-	padding:2% 5%;
-	text-align:center;
-	text-decoration:none;
-	font-size:1em;
-}
+						@keyframes bounce {
+						  0%, 20%, 50%, 80%, 100% {
+						    transform: translateY(0);
+						  }
+						  40% {
+						    transform: translateY(-30px);
+						  }
+						  60% {
+						    transform: translateY(-15px);
+						  }
+						}
 
-.arrow {
-	width:75px;
-	height:75px;
-	margin: 20% auto;
-	border-radius:100px;
-	background-color:#FFFFF0;
-	box-shadow: 
-		0 3px 6px rgba(0, 0, 0, 0.36),
-		0 3px 6px rgba(0, 0, 0, 0.36),
-		0 3px 6px rgba(0, 0, 0, 0.36),
-		0 3px 6px rgba(0, 0, 0, 0.36);
-}
-.arrow > i{
-	margin-top:7px;
-	font-size:60px;
-}
+/* About section stylings */
+	.about-section{
+		padding: 5% 0 0;
+		text-align: center;
+	}
+	/* Left Container */
+		.about-left-container{
+			width: 80%;
+			margin: 0 auto;
+			color:#330004;
+		}
+		.about-left-container > .image-container{
+			width:150px; 
+			margin: 0 auto 5%;
+		}
+		.about-left-container img{
+			border-radius:100%;
+		}
 
+	/* Right Container */
+		.about-right-container{
+			width: 80%;
+			margin: 0 auto;
+		}
