--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,32 @@
 body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 
 /* default stylings */
-	h1{color:#330004;}	
+	h1{
+		color:#330004; 
+		font-family:'PT Sans Narrow', sans-serif; 
+		text-transform: uppercase
+	}	
+	button[type="button"] {
+		background-color: #330004;
+		border: none;
+		color: #FFFFF0;
+		padding:2% 5%;
+		margin:5% 0;
+		text-align:center;
+		text-decoration:none;
+		font-size: 1em;
+		text-transform: uppercase;
+	}
+
 	.image-container > img { width:100%; height:auto;}
-	.left, .right{width:50%; float:left;}
+	.about-section, .jumbo-child{
+		display:inline-flex;
+	}
+	.flex-container{
+		width:50%;
+		justify-content: space-around;
+	}
 	
-	.clear-both{clear:both;}
 
 /* home section stylings */
 	.main-section{
@@ -33,9 +54,9 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 			padding: 1% 0;
 			text-align:center;
 			text-transform: uppercase;
-			font-family: 'Lato', sans-serif;
 			font-size:32px;
 		}
+		.logo-container > h1 {font-family: 'Lato', sans-serif;}
 		/* Jumbotron's styling */
 			.jumbotron{
 				width:70%;
@@ -53,7 +74,6 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 				}
 				.jumbo-child h1{
 					color:#FFFFF0;
-					font-family: 'PT Sans Narrow', sans-serif;
 					text-transform: uppercase;
 					letter-spacing:0.3em;
 					line-height:2;
@@ -70,16 +90,6 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 					font-size:0.8em;
 				}
 
-				.jumbo-child button {
-					background-color: #330004;
-					border: none;
-					color: #FFFFF0;
-					padding:2% 5%;
-					margin:5% 0;
-					text-align:center;
-					text-decoration:none;
-					font-size:1em;
-				}
 				/* Arrow styling */
 					.arrow {
 						width:75px;
@@ -117,25 +127,84 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 
 /* About section stylings */
 	.about-section{
-		padding: 5% 0 0;
+		width:100%;
+		padding: 5% 0;
 		text-align: center;
 	}
+	.about-section img{
+		border-radius:100%;
+	}
+	.about-section h1{
+		font-size:2em;
+		color:#999;
+		letter-spacing:5px;
+		margin: 5% 0;
+	}
+	.about-section p{
+		font-weight:normal;
+		text-align:justify;
+		line-height: 1.618;
+		margin:5% auto;
+	}
+
 	/* Left Container */
 		.about-left-container{
-			width: 80%;
 			margin: 0 auto;
 			color:#330004;
 		}
 		.about-left-container > .image-container{
 			width:150px; 
-			margin: 0 auto 5%;
+			margin: 0 auto ;
 		}
-		.about-left-container img{
-			border-radius:100%;
+		.about-left-container p{
+			width:80%;
 		}
 
 	/* Right Container */
 		.about-right-container{
-			width: 80%;
 			margin: 0 auto;
 		}
+
+		.blog-post-container{
+			display: inline-flex;
+		}
+		.post-container{
+			max-width:300px;
+			background: white;
+			border:solid black 1px;
+			margin: 0 3%;
+			padding: 1% 3%;
+		}
+
+		.about-right-container .image-container{
+			width:125px;
+			height:auto;
+			margin: 25px auto;
+		}
+		.post-container h1{
+			font-size:1.25em;
+		}
+		.post-container .author-info{
+			font-size:0.75em;
+			color:#999;
+		}
+		.post-container .post-summary{
+			font-size:0.75em;
+			color:#330004;
+		}
+		.post-container button{
+			font-size:0.75em;
+		}
+
+/* Footer section stylings */
+	.footer-section > footer{
+		font-size:1.25em;
+		display:flex;
+			flex-flow: row wrap;
+			justify-content: space-between;
+			align-items: center;
+	}
+
+	.footer-section > footer i{
+		padding:0 5px;
+	}
