--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 	box-sizing: border-box;
 	font-family:'Raleway', sans-serif;
 	font-weight: 100;
+	text-align: center;
 }
 
 body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
@@ -29,9 +30,15 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		font-size: 1em;
 		text-transform: uppercase;
 	}
-
+	.hidden{
+		display:none;
+		border: 0;
+		height: 2px;
+		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255,255,255,0.5), rgba(0,0,0,0));
+	}
 	.image-container > img { width:100%; height:auto;}
-	.about-section, .jumbo-child{
+	.flex-parent{
+		width:100%;
 		display:inline-flex;
 	}
 	.flex-container{
@@ -42,42 +49,49 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 
 /* home section stylings */
 	.main-section{
-		width:100%;
 		height: 100%; 
-		background:url("../images/adult-application-asian-733856.jpg") no-repeat center;
-		background-size: cover;
+		background:url("../images/adult-application-asian-733856.jpg");
+		background-position: center;
+  		background-repeat: no-repeat;
+  		background-size: cover;
+	}
+	.home-container{
+		height:95%;
+		justify-content:space-between;
+		flex-direction: column;
 	}
 	/* header stylings */
 		.logo-container{
 			width:100%;
-			height:5%;
-			padding: 1% 0;
-			text-align:center;
 			text-transform: uppercase;
 			font-size:32px;
 		}
 		.logo-container > h1 {font-family: 'Lato', sans-serif;}
+		
 		/* Jumbotron's styling */
 			.jumbotron{
 				width:70%;
-				height:95%;
-				margin:0 auto;
-				text-align:center;
+				max-width:800px;
+				margin: 0 auto;
 			}
 			/* Jumbotron's child styling */
 				.jumbo-child{
-					margin:15% auto 0;
-					padding: 2% 5%;
+					justify-content: space-around;
 					color:#FFFFF0;
 					background-color: rgba(0, 0, 0, 0.75);
 					text-align:center;
 				}
-				.jumbo-child h1{
+				.jumbo-child > .flex-container{
+					width:100%;
+				}
+				.jumbo-child h1, .jumbo-child p{
 					color:#FFFFF0;
+					padding: 2% 0;
+				}
+				.jumbo-child h1{
 					text-transform: uppercase;
 					letter-spacing:0.3em;
 					line-height:2;
-					padding: 2% 0;
 					font-size:2em;
 				}
 				.jumbo-child p{
@@ -85,51 +99,51 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 					margin:0 auto;
 					letter-spacing: 0.1em;
 					line-height:1.618;
-					padding: 2% 0;
-					color:#FFFFF0;
 					font-size:0.8em;
 				}
+			/* Arrow styling */
+				.arrow-container{ 
+					margin:0 auto; 
+				}
+				.arrow {
+					width: 75px;
+					height: 75px;
+					margin: 0 auto;
+					border-radius:100px;
+					background-color:#FFFFF0;
+					box-shadow: 
+						0 3px 6px rgba(0, 0, 0, 0.36),
+						0 3px 6px rgba(0, 0, 0, 0.36),
+						0 3px 6px rgba(0, 0, 0, 0.36),
+						0 3px 6px rgba(0, 0, 0, 0.36);
+				}
+				.arrow > i{
+					margin-top:7px;
+					font-size:60px;
+				}
 
-				/* Arrow styling */
-					.arrow {
-						width:75px;
-						height:75px;
-						margin:10% auto;
-						border-radius:100px;
-						background-color:#FFFFF0;
-						box-shadow: 
-							0 3px 6px rgba(0, 0, 0, 0.36),
-							0 3px 6px rgba(0, 0, 0, 0.36),
-							0 3px 6px rgba(0, 0, 0, 0.36),
-							0 3px 6px rgba(0, 0, 0, 0.36);
+				/* For bounce animation */
+					.bounce {
+					  animation: bounce 2s infinite;
 					}
-					.arrow > i{
-						margin-top:7px;
-						font-size:60px;
+
+					@keyframes bounce {
+					  0%, 20%, 50%, 80%, 100% {
+					    transform: translateY(0);
+					  }
+					  40% {
+					    transform: translateY(-30px);
+					  }
+					  60% {
+					    transform: translateY(-15px);
+					  }
 					}
-
-					/* For bounce animation */
-						.bounce {
-						  animation: bounce 2s infinite;
-						}
-
-						@keyframes bounce {
-						  0%, 20%, 50%, 80%, 100% {
-						    transform: translateY(0);
-						  }
-						  40% {
-						    transform: translateY(-30px);
-						  }
-						  60% {
-						    transform: translateY(-15px);
-						  }
-						}
 
 /* About section stylings */
 	.about-section{
-		width:100%;
+		width:80%;
 		padding: 5% 0;
-		text-align: center;
+		margin:0 auto;
 	}
 	.about-section img{
 		border-radius:100%;
@@ -149,30 +163,33 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 
 	/* Left Container */
 		.about-left-container{
+			padding:0 1%;
 			margin: 0 auto;
 			color:#330004;
 		}
 		.about-left-container > .image-container{
 			width:150px; 
-			margin: 0 auto ;
+			margin: 0 auto;
 		}
 		.about-left-container p{
-			width:80%;
+			
 		}
 
 	/* Right Container */
 		.about-right-container{
+			width:50%; 
+			padding:0 1%;
 			margin: 0 auto;
 		}
 
 		.blog-post-container{
+			width:90%;
 			display: inline-flex;
 		}
 		.post-container{
-			max-width:300px;
+			max-width: 300px;
 			background: white;
 			border:solid black 1px;
-			margin: 0 3%;
 			padding: 1% 3%;
 		}
 
@@ -198,7 +215,9 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 
 /* Footer section stylings */
 	.footer-section > footer{
-		font-size:1.25em;
+		width:80%;
+		font-size:1.1em;
+		margin:0 auto;
 		display:flex;
 			flex-flow: row wrap;
 			justify-content: space-between;
@@ -206,5 +225,100 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	}
 
 	.footer-section > footer i{
+		font-size:1.5em;
 		padding:0 5px;
 	}
+
+
+@media screen and (max-width:1440px){
+	.about-section{
+		width:90%;
+	}
+	.about-left-container{
+		width:40%;
+	}
+	.about-right-container{
+		width:60%;
+	}
+}
+
+@media screen and (max-width:1024px){
+	.about-section{
+		width:100%;
+	}
+	.blog-post-container{
+		width:100%;
+	}
+	.post-container{
+		max-width:275px;
+	}
+}
+
+@media screen and (max-width: 768px){
+	.jumbo-child h1{
+		font-size:1.75em;
+	}
+	.jumbo-child p{
+		width:85%;
+		font-size:0.75em;
+		letter-spacing:0.08em;
+		font-weight:100;
+	}
+
+	.about-section{
+		padding-bottom:7.5%;
+		flex-direction: column;
+	}
+	.about-left-container, .about-right-container{
+		width:100%;
+		padding:0;
+	}
+	.about-left-container p {
+		width:85%;
+	}
+	.post-container{
+		max-width:300px;
+	}
+	.blog-post-container{
+		justify-content: space-evenly;
+	}
+	.footer-section > footer{
+		width:85%;
+		font-size:0.9em;
+		flex-flow: column-reverse wrap;
+	}
+
+	.footer-section > footer i{
+		font-size: 2.5em;
+		padding:10% 15px;
+	}
+}
+@media screen and (max-width:425px){
+	.hidden{
+		display: block;
+	}
+	.jumbotron{
+		width:85%;
+	}
+	.jumbo-child{
+		flex-flow: column wrap;
+	}
+	.jumbo-child > .flex-container{
+		padding: 5% 1%;
+	}
+	.arrow{
+		width:50px;
+		height:50px;
+	}
+	.arrow > i{
+		font-size:35px;
+	}
+
+	.blog-post-container{
+		flex-flow:column wrap;
+	}
+	.post-container{
+		margin:5% auto;
+	}
+
+}
