--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow');
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 *{
 	margin:0;
@@ -18,14 +19,15 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	h1{
 		color:#330004; 
 		font-family:'PT Sans Narrow', sans-serif; 
-		text-transform: uppercase
+		text-transform: uppercase;
+		font-weight:700;
 	}	
 	button[type="button"] {
 		background-color: #330004;
 		border: none;
 		color: #FFFFF0;
-		padding:2% 5%;
-		margin:5% 0;
+		padding: 2% 5%;
+		margin: 5% 0;
 		text-align:center;
 		text-decoration:none;
 		font-size: 1rem;
@@ -52,8 +54,8 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	.main-section{
 		height: 100%; 
 		background: linear-gradient(
-			rgba(0, 0, 0, 0.25),
-			rgba(0, 0, 0, 0.25)
+			rgba(0, 0, 0, 0.5),
+			rgba(0, 0, 0, 0.5)
 			), 
 			url("../images/adult-application-asian-733856.jpg");
 		background-position: center;
@@ -62,6 +64,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	}
 	.home-container{
 		height:95%;
+		padding: 3% 0;
 		justify-content:space-between;
 		flex-direction: column;
 	}
@@ -70,9 +73,17 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 			width:100%;
 			text-transform: uppercase;
 			font-size:2rem;
+			justify-content: space-around;
 		}
-		.logo-container > h1 {font-family: 'Lato', sans-serif;}
-		
+		.logo-container > h1 {
+			font-family: 'Lato', sans-serif; 
+			color:#FFFFF0;
+			font-size:2rem;
+		}
+		.logo-container > hr{
+			margin-top: 3%;
+			display: flex;
+		}
 		/* Jumbotron's styling */
 			.jumbotron{
 				width:70%;
@@ -83,7 +94,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 				.jumbo-child{
 					justify-content: space-around;
 					color:#FFFFF0;
-					background-color: rgba(0, 0, 0, 0.5);
+					/*background-color: rgba(0, 0, 0, 0.5);*/
 					text-align:center;
 				}
 				.jumbo-child > .flex-container{
@@ -94,31 +105,44 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 					padding: 2% 0;
 				}
 				.jumbo-child h1{
-					text-transform: uppercase;
-					letter-spacing:0.3em;
+					text-transform: initial;
+					letter-spacing:0.1em;
 					line-height:2;
-					font-size:2rem;
+					font-size: 3rem;
 				}
 				.jumbo-child p{
 					width:70%;
 					margin:0 auto;
 					letter-spacing: 0.1em;
 					line-height:1.618;
-					font-size:0.8em;
+					font-size:0.9em;
+
+/*
+					display: none;*/
 				}
 				.jumbo-child button {
 					margin: 3%;
-					background: #330004;
-					border: 1px solid #FFFFF0;
-					border-radius: 15px;
+					/*border: 1px solid #FFFFF0;*/
+					border-radius: 10px;
+					background: #FFFFF0;
+					color: #330004;
+					/*background: linear-gradient(to right, transparent 50%, #330004 50%);
+					background-position: left bottom;
+					background-size: 200% 100%; */
+					transition: all 0.25s ease;
+				}
+				.jumbo-child button:hover{
+					background-color:  #330004;
+					color:#FFFFF0;
+					/*background-position: right bottom;*/
 				}
 			/* Arrow styling */
 				.arrow-container{ 
-					margin:0 auto; 
+					margin: -2% auto; 
 				}
 				.arrow {
-					width: 75px;
-					height: 75px;
+					width: 60px;
+					height: 60px;
 					margin: 0 auto;
 					border-radius:100px;
 					background-color:#FFFFF0;
@@ -134,8 +158,8 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 					color:#330004;
 				}
 				.arrow i{
-					margin-top:7px;
-					font-size:4.5rem;
+					margin-top:10px;
+					font-size:3.0rem;
 				}
 
 				/* For bounce animation */
@@ -158,6 +182,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 /* About section stylings */
 	.about-section{
 		width:100%;
+		max-width:1400px;
 		padding: 5% 0;
 		margin:0 auto;
 	}
@@ -176,10 +201,12 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		line-height: 1.618;
 		margin:5% auto;
 	}
-
+	.about-left-container, .about-right-container{
+		margin: 0 auto;
+	}
 	/* Left Container */
 		.about-left-container{
-			margin: 0 3%;
+			/*margin: 0 3%;*/
 		}
 		.about-left-container > .image-container{
 			width:150px; 
@@ -191,11 +218,12 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 
 	/* Right Container */
 		.about-right-container{
-			margin:0 3%;
+			/*margin:0 3%;*/
 		}
 
 		.blog-post-container{
 			width:100%;
+			max-width: 650px;
 			display: inline-flex;
 			justify-content: space-between;
 		}
@@ -227,6 +255,15 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		}
 
 /* Footer section stylings */
+	.footer-section{
+		padding:1% 0;
+	}
+
+	.footer-section > hr{
+		display:block;		
+		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(20,0,2,0.5), rgba(0,0,0,0));
+		margin: 1% auto;
+	}
 	.footer-section > footer{
 		width:80%;
 		font-size:1.1em;
@@ -243,19 +280,34 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	}
 
 
+
 @media screen and (max-width:1440px){
+	.jumbo-child h1{
+		font-size:1.75em;
+	}
+	.jumbo-child p{
+		width:85%;
+		font-size:0.75em;
+		letter-spacing:0.08em;
+		font-weight:100;
+	}
 	.about-left-container{
 		width:40%;
 	}
-	.about-right-container{
-		width:60%;
+	.blog-post-container{
+		max-width:600px;
+	}
+	.post-container{
+		max-width:260px;
 	}
 }
 
 @media screen and (max-width: 1200px){
+	.blog-post-container{
+		max-width: 550px;
+	}
 	.post-container{
-		width:60%;
-		padding: 1% 2%;
+		max-width:250px;
 	}
 }
 
@@ -265,7 +317,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	}
 	.blog-post-container{
 		width:100%;
-		justify-content:space-between;
+		justify-content: space-between;
 	}	
 	.about-section{
 		padding-bottom:7.5%;
@@ -284,20 +336,12 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		max-width:275px;
 	}
 	.blog-post-container{
+		max-width: 600px;
 		justify-content: space-around;
 	}
 }
 
 @media screen and (max-width: 768px){
-	.jumbo-child h1{
-		font-size:1.75em;
-	}
-	.jumbo-child p{
-		width:85%;
-		font-size:0.75em;
-		letter-spacing:0.08em;
-		font-weight:100;
-	}
 	.post-container{
 
 	}
