--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow');
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+/* Site Stylesheet
+  1. Global Styles
+  2. Typography Styles
+  3. Structure Styles
+  4. Module Styles
+  5. Component Styles
+  6. Page Styles
+======================================== */
+/* 
+color library
+	Monochromatic:
+		#0D1C32 - dark navy blue
+		#627FB0 - slate blue
+		#F5F9FF - very light 
+	Analougus Color Scheme:
+		#60B3BD - teal
+
+
+*/
+
+
+/* 1. Global Styles
+======================================== */
+
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:200,300,500,600');
+@import url('https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
@@ -15,37 +39,58 @@ html{scroll-behavior: smooth;}
 
 body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 
-/* default stylings */
+/* 1. Typography Styles
+======================================== */
 	h1{
-		color:#330004; 
+		color:#FFFFF0;
 		font-family:'PT Sans Narrow', sans-serif; 
 		text-transform: uppercase;
-		font-weight:700;
+		font-weight: 600;
+		line-height:1.618;
+		font-size: 6.5vw;
+		letter-spacing: 0.15vw;
 	}	
-	button[type="button"] {
+	p{
+		color:#FFFFF0;
+		font-family:'Raleway', sans-serif;
+		font-weight: 300;
+		font-size: 3.0vw; 
+	}
+	button[type="button"], button[type="submit"] {
 		background-color: #330004;
 		border: none;
+		border-radius: 3px;
+		margin: 5% 2%;
+		padding: 3.75% 7.5%;
+		
 		color: #FFFFF0;
-		padding: 2% 5%;
-		margin: 5% 0;
-		text-align:center;
-		text-decoration:none;
-		font-size: 1rem;
 		text-transform: uppercase;
+		font-size: 3vw;
+		font-weight:400;
+		text-align: center;
+		text-decoration:none;
+
+		cursor: pointer;
 	}
-	.hidden{
-		display:none;
+	
+	a{
+		display:block;
+		text-decoration: none;
+		color:inherit;
+	}
+
+	hr{
 		border: 0;
 		height: 2px;
 		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255,255,255,0.5), rgba(0,0,0,0));
 	}
 	.image-container > img { width:100%; height:auto;}
+	
 	.flex-parent{
 		width:100%;
 		display:inline-flex;
 	}
 	.flex-container{
-		width:50%;
 		justify-content: space-around;
 	}
 	
@@ -56,94 +101,104 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		background: linear-gradient(
 			rgba(0, 0, 0, 0.5),
 			rgba(0, 0, 0, 0.5)
-			), 
-			url("../images/adult-application-asian-733856.jpg");
+		), url("../images/adult-application-asian-733856.jpg");
 		background-position: center;
   		background-repeat: no-repeat;
   		background-size: cover;
 	}
 	.home-container{
-		height:95%;
-		padding: 3% 0;
-		justify-content:space-between;
+		height: 100%;
+		justify-content: space-between;
 		flex-direction: column;
+		padding:0 5%;
 	}
 	/* header stylings */
-		.logo-container{
+		.header-container{
 			width:100%;
+			flex-direction: column;
+			color:#FFFFF0;
+		}
+		.logo-container{
+			margin: 0 auto;
 			text-transform: uppercase;
-			font-size:2rem;
+			font-size: 2vw;
 			justify-content: space-around;
 		}
-		.logo-container > h1 {
+		.logo-container > h2 {
 			font-family: 'Lato', sans-serif; 
-			color:#FFFFF0;
-			font-size:2rem;
+			font-size: 5vw;
+			padding: 2% 0 4%;
+			letter-spacing:1rem;
+			color: inherit;
 		}
-		.logo-container > hr{
-			margin-top: 3%;
-			display: flex;
+		
+		.navbar-container{
+			width:100%;
+			margin: 0 auto;
+		}
+		.navbar-container > ul{
+			list-style: none;
+		}
+		.navbar-container > ul > li{
+			width: 100%;
+			font-size: 3.5vw;
+			font-weight: 700;
+			line-height: 1.618;
+			text-transform: uppercase;
+			padding: 0 1%;
+			transition: color 0.2s ease-in;
+		}
+		.navbar-container > ul li:hover{
+			color:#D1D1C5;
+			
+		}
+		.navbar-container > hr{
+			margin-top: 1.5%;
 		}
 		/* Jumbotron's styling */
 			.jumbotron{
-				width:70%;
-				max-width:800px;
+				width:100%;
+				max-width:1600px;
 				margin: 0 auto;
 			}
 			/* Jumbotron's child styling */
 				.jumbo-child{
 					justify-content: space-around;
 					color:#FFFFF0;
-					/*background-color: rgba(0, 0, 0, 0.5);*/
-					text-align:center;
+					text-align: center;
 				}
-				.jumbo-child > .flex-container{
-					width:100%;
-				}
+
 				.jumbo-child h1, .jumbo-child p{
-					color:#FFFFF0;
-					padding: 2% 0;
+					padding: 2%;
 				}
 				.jumbo-child h1{
-					text-transform: initial;
-					letter-spacing:0.1em;
-					line-height:2;
-					font-size: 3rem;
+					font-family:'Helvetica';
 				}
 				.jumbo-child p{
-					width:70%;
+					width:100%;
 					margin:0 auto;
 					letter-spacing: 0.1em;
 					line-height:1.618;
-					font-size:0.9em;
 
-/*
-					display: none;*/
+					/*display: none;*/
 				}
 				.jumbo-child button {
-					margin: 3%;
-					/*border: 1px solid #FFFFF0;*/
-					border-radius: 10px;
 					background: #FFFFF0;
 					color: #330004;
-					/*background: linear-gradient(to right, transparent 50%, #330004 50%);
-					background-position: left bottom;
-					background-size: 200% 100%; */
 					transition: all 0.25s ease;
 				}
 				.jumbo-child button:hover{
 					background-color:  #330004;
 					color:#FFFFF0;
-					/*background-position: right bottom;*/
 				}
 			/* Arrow styling */
 				.arrow-container{ 
-					margin: -2% auto; 
+					margin: 2% auto; 
 				}
 				.arrow {
-					width: 60px;
-					height: 60px;
-					margin: 0 auto;
+					width: 12vw;
+					height: 12vw;
+					margin: 0 auto 10px;
 					border-radius:100px;
 					background-color:#FFFFF0;
 					box-shadow: 
@@ -151,49 +206,43 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 						0 3px 6px rgba(0, 0, 0, 0.36),
 						0 3px 6px rgba(0, 0, 0, 0.36),
 						0 3px 6px rgba(0, 0, 0, 0.36);
-				}
-				.arrow > a{
-					display:block;
-					text-decoration: none;
-					color:#330004;
-				}
-				.arrow i{
-					margin-top:10px;
-					font-size:3.0rem;
-				}
 
-				/* For bounce animation */
-					.bounce {
+
 					  animation: bounce 2s infinite;
+				}					
+				@keyframes bounce {
+					0%, 20%, 50%, 80%, 100% {
+						transform: translateY(0);
 					}
+					40% {
+						transform: translateY(-10px);
+					}
+					60% {
+						transform: translateY(-2px);
+					}
+				}
 
-					@keyframes bounce {
-					  0%, 20%, 50%, 80%, 100% {
-					    transform: translateY(0);
-					  }
-					  40% {
-					    transform: translateY(-30px);
-					  }
-					  60% {
-					    transform: translateY(-15px);
-					  }
-					}
+				.arrow i{
+					margin-top: 8px;
+					font-size: 8vw;
+				}
+
+
 
 /* About section stylings */
 	.about-section{
 		width:100%;
-		max-width:1400px;
-		padding: 5% 0;
+		background:#330004;
 		margin:0 auto;
+	}
+	.about-container{
+		padding: 5% 0;
+		max-width:1400px;
+		
+		color: #E8E8DB;
 	}
 	.about-section img{
 		border-radius:100%;
-	}
-	.about-section h1{
-		font-size:2em;
-		color:#999;
-		letter-spacing:5px;
-		margin: 5% 0;
 	}
 	.about-section p{
 		font-weight:normal;
@@ -201,68 +250,188 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		line-height: 1.618;
 		margin:5% auto;
 	}
-	.about-left-container, .about-right-container{
+	.about-container, .blog-container{
 		margin: 0 auto;
 	}
 	/* Left Container */
-		.about-left-container{
-			/*margin: 0 3%;*/
+		.about-container{
+			width:100%;
+			align-items: center;
 		}
-		.about-left-container > .image-container{
-			width:150px; 
+		.about-container > .image-container{
+			width:250px; 
 			margin: 0 auto;
 		}
-		.about-left-container p{
+		.about-container p{
 			
 		}
 
-	/* Right Container */
-		.about-right-container{
-			/*margin:0 3%;*/
-		}
+/* Right Container *//*PEN STYLES*/
+.blog-section{
+	width:100%;
+}
+.blog-container{
+	width:80%;
+	padding: 5% 0;
+}
+.blog-container > .flex-parent{
+	margin: 5% auto 0;
+	justify-content: space-evenly;
+}
+.card-container{
+	width:30%;
+	min-height:400px;
+}
+.blog-card{
+	background:#fff;
+	min-height:100%;
+	margin: 0 5%;
 
-		.blog-post-container{
-			width:100%;
-			max-width: 650px;
-			display: inline-flex;
-			justify-content: space-between;
-		}
-		.post-container{
-			max-width: 300px;
-			background: white;
-			border:solid black 1px;
-			padding: 1% 3%;
-		}
+	box-shadow:
+		2.5px 2.5px 15px #EEE,
+		-2.5px -2.5px 15px #EEE,
+		2.5px -2.5px 15px #EEE,
+		-2.5px 2.5px 15px #EEE;
+}
 
-		.about-right-container .image-container{
-			width:125px;
-			height:auto;
-			margin: 25px auto;
-		}
-		.post-container h1{
-			font-size:1.25em;
-		}
-		.post-container .author-info{
-			font-size:0.75em;
-			color:#999;
-		}
-		.post-container .post-summary{
-			font-size:0.75em;
-			color:#330004;
-		}
-		.post-container button{
-			font-size:0.75em;
-		}
+.blog-content{
+	padding: 3% 3% 5%;
+}
+.blog-content > h1{
+	margin: 2% 0 2%;
+	text-align: left;
+	font-weight: 600;
+}
+.blog-content > p{
+	font-weight: 100;
+	text-align: left;
+	font-size:1em;
+	margin: 0 0 2%;
+}
+.blog-content > p.description{
+	margin: 1% 0 2%;
+	max-width: 250px;
+	max-height: 110px;
+	min-height:110px;
+	line-height: 1.3;
+	overflow-wrap: break-word;
+	overflow: hidden;
+	font-weight:300;
+}
+.blog-content > p.read-more{
+	text-align: right;
+	margin-top:12%;
+	font-weight: 200;
+	transition: all ease 0.1s;
+}
 
+p.read-more:hover{
+	font-weight:400;
+}
+
+/* Contact Form */
+	.contact-section{
+		width:100%;
+		background: #330004;
+	}
+	.contact-container{
+		padding:5% 0;
+		width: 50%;
+		margin: 0 auto;
+	}
+
+	.contact-container > .contact-form {
+		max-width:500px;
+		min-height: 250px;
+		margin-top: 5%;
+		justify-content: center;
+		flex-direction:column;
+	}
+	.contact-form > .flex-parent{
+		padding: 5% 0 10%;
+	}
+
+	.contact-form > .contact-btn {
+		padding-bottom: 0;
+	}
+	.contact-form .form-field{
+		position:relative;
+		width:50%;
+		margin: 0 5%;
+	}
+	.contact-form .col-100{
+		width:100%;
+	}
+	.form-field > input {
+		width: 100%;
+		height: 36px;
+		border: none;
+		border-bottom: 2px solid #8C8C83;
+		font-size: 18px;
+		line-height: 26px;
+		background: transparent;
+		font-weight: 400;
+		text-align: left;
+		color:#FFFFF0;
+		transition: 0.2s ease border-bottom;
+	}
+	.col-100 > input {
+		width: 100%;
+	}
+	.contact-form input:focus{
+		border-bottom: 3px solid #fffff0;
+		outline: none;
+	}
+	.form-field label{
+		position: absolute;
+			left:5px;
+			bottom: 8px;
+		font-family: Lato, serif;
+		font-size: 18px;
+		line-height: 26px;
+		font-weight: 400;
+		color: #888;
+		cursor: text;  
+		pointer-events:none;
+
+		transition: 0.2s ease all;
+	}
+	/*.contact-form input:focus ~ label {
+		top:20px;
+	}*/
+	.form-field > input:focus ~ label, 
+	.form-field > input:not(:placeholder-shown) ~ label/*, 
+	.form-field > input:required ~ label*/{
+	  top:-18px;
+	  left:0;
+	  font-size:14px;
+	  color:#B8B88E;
+	}
+
+	.form-field button{
+		width:100%;
+		height:100%;
+		margin:0;
+		border-radius: 10px;
+		background: #FFFFF0;
+		color: #330004;
+		transition: all ease 0.25s;
+	} 
+	.form-field button:hover{
+		background:#E8E8DB;
+		color: #2F0004;
+	}
 /* Footer section stylings */
 	.footer-section{
-		padding:1% 0;
+		background:#330004;
+		/*padding: 1% 0;*/
+		color:#8C8C83;
 	}
 
 	.footer-section > hr{
-		display:block;		
-		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(20,0,2,0.5), rgba(0,0,0,0));
-		margin: 1% auto;
+		display: block;		
+		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(93,93,93,0.5), rgba(0,0,0,0));
+		margin: 0 auto 1%;
 	}
 	.footer-section > footer{
 		width:80%;
@@ -274,25 +443,34 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 			align-items: center;
 	}
 
-	.footer-section > footer i{
+	.icons-container{
+		justify-content: flex-end;
+		align-items:center;
+	}
+	
+	.icons-container i{
 		font-size:1.5em;
-		padding:0 5px;
+		padding:0 10px;
+		color:;
+		transition: color 0.3s linear;
+	}
+	.icons-container i:hover{
+		color:#BBB;
 	}
 
 
-
-@media screen and (max-width:1440px){
+/*@media screen and (max-width:1440px){
 	.jumbo-child h1{
-		font-size:1.75em;
+		font-size:2.5em;
 	}
 	.jumbo-child p{
 		width:85%;
-		font-size:0.75em;
+		font-size:1em;
 		letter-spacing:0.08em;
 		font-weight:100;
 	}
-	.about-left-container{
-		width:40%;
+	.about-container{
+		width:80%;
 	}
 	.blog-post-container{
 		max-width:600px;
@@ -323,12 +501,12 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		padding-bottom:7.5%;
 		flex-direction: column;
 	}
-	.about-left-container, .about-right-container{
+	.about-container, .blog-container{
 		width:90%;
 		margin: 0 auto;
 		padding:0;
 	}
-	.about-left-container p {
+	.about-container p {
 		width:90%;
 		margin:0 auto;
 	}
@@ -380,7 +558,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	.arrow i{
 		font-size:2.5rem;
 	}
-	.about-left-container p {
+	.about-container p {
 		width:70%;
 	}
 
@@ -392,7 +570,7 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 	}
 
 }
-@media screen and (max-width: 425px){
+@media screen and (max-width: 768px){
 	button[type="button"]{
 		margin: 5% 0;
 
@@ -401,16 +579,91 @@ body, html{height:100%; font-size:14px; background-color:#FFFFF0;}
 		letter-spacing: 3px;
 	}
 }
+*/
+@media screen and (max-width:1024px){
+	button[type="button"], button[type="submit"] {
+		padding: 1.5% 3%;
+		font-size: 2vw;
+		font-weight:400;
+	}
+	.logo-container > h2 { 
+		font-size: 5vw;
+	}
+	.navbar-container > ul > li{
+		font-size: 2vw;
+	}
+	.jumbo-child h1{
+		font-size: 3vw;
+	}
+	.jumbo-child p{
+		font-size:2.5vw;
+		font-weight: 200;
+	}
 
-@media screen and (max-width:320px){
-	.logo-container > h1{
-		font-size:2.5rem;
+	.arrow{
+		width: 6vw;
+		height: 6vw;
+	}
+	.arrow i{
+		margin-top: 6px;
+		font-size: 5vw;
+	}
+}
+
+/*@media screen and (max-width: 767px) and (orientation: landscape) {
+  html {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}*/
+
+@media screen and (max-width:425px){
+	button[type="button"], button[type="submit"] {
+		padding: 3.75% 7.5%;
+		font-size: 3vw;
+		font-weight:400;
+	}
+	.logo-container{
+		font-size: 2vw;
+	}
+	.logo-container > h2 { 
+		font-size: 5vw;
+	}
+	.navbar-container > ul > li{
+		font-size: 3.5vw;
 	}
 
 	.jumbo-child h1{
-		line-height:1.314;
+		font-size:6vw;
 	}
 	.jumbo-child p{
-		line-height:1.314;
+		font-size:4vw;
+		font-weight:200;
+	}
+	.arrow {
+		width: 17.5vw;
+		height: 17.5vw;
+	}
+
+	.arrow i{
+		margin-top: 12px;
+		font-size: 12vw;
+	}
+}
+
+@media screen and (max-width:375px){
+	.arrow{
+		width: 20vw;
+		height: 20vw;
+	}
+
+	.arrow i{
+		margin-top:10px;
+		font-size:15vw;
 	}
 }
