--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,7 +436,6 @@ p.read-more:hover{
 		color:#8C8C83;
 	}
 	.footer-section > hr{
-		width:;
 		display: block;		
 		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(93,93,93,0.5), rgba(0,0,0,0));
 		margin: 0 auto 1%;
@@ -473,7 +472,7 @@ p.read-more:hover{
 	.icons-container i{
 		font-size:1.5em;
 		padding:0 10px;
-		color:;
+		color:hsl(60, 3%, 35%);
 		transition: color 0.3s linear;
 	}
 	.icons-container i:hover{
@@ -587,14 +586,14 @@ p.read-more:hover{
 		width:80%;
 	}
 	.blog-card > .image-container {
-		display:none;
+		display: none;
 	}
 	.blog-card > .blog-content{
-		width:h60%;
+		width:60%;
 		margin: 0 auto;
 	}
 	.jumbo-child h1{
-		font-size:24px;
+		font-size: 24px;
 	}
 	.jumbo-child p {
 		font-size:12px;
